--- a/configs/edges.yaml
+++ b/configs/edges.yaml
@@ -14,18 +14,21 @@ edges:
         fallback_mode: false
       B:
         fallback_mode: live
-    stack:
-      enabled: true
-      min_raw_best2_sum: 400
-      max_spread_ticks: 6
-      size_mult: 0.3
-      ttl_bump_ms: 400
-      liability_cap_per_runner: 5.0
-      max_quotes_per_lane_per_market: 2
+    overlays:
+      stacking:
+        enabled: true
+        min_raw_best2_sum: 400
+        max_spread_ticks: 6
+        size_mult: 0.3
+        ttl_bump_ms: 400
+        liability_cap_per_runner: 5.0
+        levels: 1            # ≈ max_quotes_per_lane_per_market - 1 (2 → 1)
+        tick_spacing: 1
     hedge:
       enabled: true
       cushion_ticks: 1
       ttl_ms: 3000
+
   mean_revert:
     enabled: false
     default_size: 1.0
@@ -37,8 +40,10 @@ edges:
     slope_suppress_abs: 0.8
     max_candidates: 2
     bundle_policy: BEST_EFFORT
+
   sp_gravity:
     enabled: false
+
   suspend_reopen:
     enabled: true
     reopen_window_ms: 1200
@@ -50,6 +55,7 @@ edges:
     disarm_flap_ms: 4000
     min_spread_ticks: 1
     bundle_policy: ALL_OR_CANCEL
+
   cross_market:
     enabled: true
     freshness_ms: 100
@@ -59,8 +65,10 @@ edges:
     top_runners: 3
     place_terms_k: 3
     max_spread_ticks: 6
+
   identity_book:
     enabled: true
+
   arbiter:
     allow_opposite_side_stack: true
     max_per_lane: 1
@@ -69,6 +77,7 @@ edges:
     - cross_market
     - mean_revert
     - maker
+
   maker_thin:
     enabled: false
     default_size: 1.0
@@ -76,12 +85,15 @@ edges:
     thin_best2_depth_sum_max: 200
     min_lifetime_ms: 2500
     slippage_cushion_ticks: 2
-    stack:
-      enabled: false
+    overlays:
+      stacking:
+        enabled: false
     hedge:
       enabled: true
+
   parity:
     bundle_policy: ALL_OR_CANCEL
+
 trend:
   thick:
     slope_window_s: 6
