--- a/configs/risk.yaml
+++ b/configs/risk.yaml
@@ -34,6 +34,7 @@ risk:
     source: fixed
     fixed_amount: 100.0
     live_haircut_pct: 10
+  per_runner_liability_cap: 10.0
   size_decision_records:
     enabled: false
   funds:
@@ -48,3 +49,4 @@ risk:
   odds:
     min: 1.01
     max: 1000.0
+
