--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -169,6 +169,15 @@ queue_signals:
   eps_size: 0.01
   use_raw: true
 
+profile:
+  loop:
+    sleep_s: 0.10
+    bankroll_refresh_s: 5.0
+    intents_per_min_cap: 3600    
+    max_edges_per_market: 8
+    max_plans_per_loop: 64
+
+
 
 
 
